# discord-ai-news

./: .gitignore  README.md  encode.py  main.py  pyproject.toml
.github/workflows/: main.yml
ai_api/gemini/: __init__.py  client.py
discord/: __init__.py  client.py  types.py
tasks/: __init__.py  types.py
